syntax = "proto3";
package delivery;

message CreateEntryRequest {
	string type = 1;
	string tenant_id = 2;
	map<string, string> data = 3;
}

message CreateEntryResponse {
	string id = 1;
}
