syntax = "proto3";
package delivery;
import "delivery/entry_filter.proto";

message GetEntriesRequest {
	string type = 1;
	string tenant_id = 2;
	string id = 3;
	int32 limit = 4;
	int32 page = 5;
	bool returnEmptyDataIfNotFound = 6;
	EntryFilter filter = 7;
	repeated EntryOrder order = 8;
}

message EntryOrder {
	string field = 1;
	bool descending = 2;
}

message Entry {
	map<string, string> data = 1;
}

message GetEntriesResponse {
	repeated Entry result = 1;
	int32 limit = 2;
	int32 page = 3;
}
