syntax = "proto3";
package delivery;
import "delivery/get_entries.proto";
import "delivery/create_entry.proto";
import "delivery/update_entry.proto";
import "delivery/delete_entries.proto";
  
service Service {
	rpc GetEntry(GetEntryRequest) returns (GetEntryResponse);
	rpc GetEntryList(GetEntryListRequest) returns (GetEntryListResponse);
	rpc CreateEntry(CreateEntryRequest) returns (CreateEntryResponse);
	rpc UpdateEntry(UpdateEntryRequest) returns (UpdateEntryResponse);
	rpc DeleteEntries(DeleteEntriesRequest) returns (DeleteEntriesResponse);
}
